--- a/recruit/templates/recruit/index.html
+++ b/recruit/templates/recruit/index.html
@@ -44,7 +44,7 @@
                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">포트폴리오</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="../portfolio">포트폴리오</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">비교과</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">모집게시판</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">졸업생 합격 수기</a></li>
