--- a/portfolio/templates/portfolio/menubar.html
+++ b/portfolio/templates/portfolio/menubar.html
@@ -1,37 +1,69 @@
+{% load static %}
+<head>
+  <meta charset="UTF-8">
+    <link href="{% static 'mypage/css/topmenu.css' %}" rel="stylesheet" type="text/css" media="screen">
+    <link href="{% static 'mypage/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css" media="screen">
+    <script src="https://kit.fontawesome.com/edea15a092.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
+</head>
+
 <script>
-    function checkMY(){
-        {% if user.is_authenticated %}
-            location.href = "http://127.0.0.1:8000/auth/{{request.user}}/";
-        {% else %}
-            var result = confirm("로그인 후 이용하실 수 있습니다. 로그인하시겠습니까?");
-                if(result) {
-                    location.href = "{% url 'user:login' %}";
-                }
-        {% endif %}
+    function checkMY(username) {
+        if (username !== "") {
+            location.href = "/auth/" + username + "/";
+        } else {
+             var result = confirm("로그인 후 이용하실 수 있습니다. 로그인하시겠습니까?");
+            if (result) {
+                location.href = "/auth/login/";
+            }
+
+        }
     }
 </script>
 
-<div class="fixed-top" id="top-menu" style="background-color:#FBE5A3;">
-    <div id="menubar-left">
-        {% if user.is_authenticated %}
-        <a class="navbar-brand" href="{% url 'user:main' %}"><b style="font-family: 'Racing Sans One', cursive; font-size: 28px;">{{user.username}}'s Challenge!</b></a>
-        {% else %}
-        <a class="navbar-brand" href="{% url 'user:main' %}"><b style="font-family: 'Racing Sans One', cursive; font-size: 28px;">Challenge!</b></a>
-        {% endif %}
-    </div>
-    <div id="menubar-center">
-        <a href="#" onclick="checkMY()">MY</a>
-    </div>
-    <div id="menubar-right">
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+      {% if user.is_authenticated %}
+        <a class="navbar-brand" href="{% url 'user:main' %}">
+            <b style="font-family: 'Racing Sans One', cursive; font-size: 28px;">{{user.username}}'s Portfolio!</b>
+        </a>
+      {% else %}
+        <a class="navbar-brand" href="{% url 'user:main' %}"><b style="font-family: 'Racing Sans One', cursive; font-size: 28px;">Portfolio!</b></a>
+      {% endif %}
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'portfolio_list' %}">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          {% if user.is_authenticated %}
+    <a class="nav-link active" aria-current="page" onclick="checkMY('{{ user.username }}')">Mypage</a>
+{% else %}
+    <a class="nav-link active" aria-current="page" onclick="checkMY('')">Mypage</a>
+{% endif %}
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+          <form class="d-flex" role="search" method="get" action="{% url 'search_view' %}">
+        <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+        <div id="menubar-right">
         {% if user.is_authenticated %}
         <a href="{% url 'user:logout' %}" class="top-login-button">로그아웃</a>
         {% else %}
         <a href="{% url 'user:login' %}" class="top-login-button">로그인</a>
         {% endif %}
     </div>
-    <form class="d-flex" role="search" method="get" action="{% url 'search_view' %}">
-        <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-</div>
-<div style="padding-top:71px"></div>
+    </div>
+
+  </div>
+</nav>
