--- a/portfolio/templates/portfolio/portfolio_list.html
+++ b/portfolio/templates/portfolio/portfolio_list.html
@@ -1,19 +1,59 @@
-<!--포트폴리오 목록 페이지-->
+<!-- 포트폴리오 목록 페이지 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>목록페이지</title>
-</head>
-<body>
-{% include 'portfolio/menubar.html' %}
-{% for p in portfolio_list %}
-<h2>{{ p.title }}</h2>
-<h3>{{ p.content }}</h3>
-<p>{{ p.created_at }}</p>
 
-<h4><a href="{{ p.get_absolute_url }}">더보기</a></h4>
-<br/><br/><br/>
-{% endfor %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+
+</head>
+
+<body>
+    {% include 'portfolio/menubar.html' %}
+    <br/><br/>
+    <div class="container">
+        <div class="row">
+            {% for p in portfolio_list %}
+                <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card" style="width: 18rem;">
+                        {% if p.head_image %}
+                        <img src="{{ p.head_image.url }}" class="card-img-top" alt="...">
+                        {% else %}
+                        <img src="https://picsum.photos/seed/{{p.id}}/800/200" class="card-img-top" alt="...">
+                        {% endif %}
+                        <div class="card-body">
+                            <h5 class="card-title">{{ p.title }}</h5>
+                            <p class="card-text">{{ p.content | truncatewords:10 }}</p>
+                            <a href="{{ p.get_absolute_url }}" class="btn btn-primary text-light">더보기</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <!-- 페이지네이션 링크 표시 -->
+        <div class="pagination justify-content-center">
+            <span class="step-links">
+
+                {% if page_obj.has_previous %}
+                <a href="?page={{page_obj.previous_page_number}}" class="btn btn-primary text-light">Prev</a>
+            {% endif %}
+            Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+            {% if page_obj.has_next %}
+                <a href="?page={{page_obj.next_page_number}}" class="btn btn-primary text-light">Next</a>
+            {% endif %}
+
+            </span>
+        </div>
+    </div>
+
+    <br/><br/><br/>
+
 </body>
+
 </html>
+
