--- a/filter/templates/filter/filter_portfolio.html
+++ b/filter/templates/filter/filter_portfolio.html
@@ -1,20 +1,179 @@
-{% block content %}
-  <h1>Filtering Portfolio</h1>
+<!-- filter/templates/filter/filter_portfolio.html -->
 
-  <form method="get" action="{% url 'filter_portfolio' %}">
-    <label for="status">학적 상태:</label>
-    <select name="status" id="status">
-      <option value="" {% if not request.GET.status %}selected{% endif %}>전체</option>
-      <option value="재학생" {% if request.GET.status =='재학생' %}selected{% endif %}>재학생</option>
-      <option value="휴학생" {% if request.GET.status =='휴학생' %}selected{% endif %}>휴학생</option>
-      <option value="졸업생" {% if request.GET.status =='졸업생' %}selected{% endif %}>졸업생</option>
-    </select>
-    <button type="submit">Filter</button>
-  </form>
+<!DOCTYPE html>
 
-  <ul>
-    {% for student in students %}
-      <li>{{ student.name }} - {{ student.status }}</li>
-    {% endfor %}
-  </ul>
-{% endblock %}
+{% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Filter Portfolio</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src = "{% static 'filter/major.js' %}"></script>
+    <link href="{% static 'filter/bootstrap/styles.css' %}">
+
+    <!-- 부트스트랩 CDN 추가 -->
+    <link rel="stylesheet" href="{% static 'filter/bootstrap/bootstrap.min.css' %}">
+
+     <style>
+        /* 라벨 폰트 색상을 회색(#999999)으로 지정 */
+        .form-check-label {
+            color: #999999;
+        }
+
+         .form-check-input:checked {
+            background-color: #02343F; !important;
+            border-color: #02343F;
+        }
+
+        /* 라디오 버튼의 일반 상태 색상을 #02343F로 지정 */
+        .form-check-input {
+            background-color: #02343F;
+            border-color: #02343F;
+        }
+
+
+        }
+    </style>
+<!--     <script src="https://code.jquery.com/jquery-latest.min.js"></script>-->
+
+
+
+
+
+
+
+
+</head>
+<body>
+    <div class="container mt-5">
+        <form method="get" action="{% url 'filter:filter_page' %}">
+            <div class="row">
+                <div class="col-md-4">
+                    <h6 style="font-weight: medium;">학적상태</h6>
+            <!-- 부트스트랩의 라디오 버튼 그룹으로 수정 -->
+<!--                    <div class="btn-group" role="group" aria-label="Small button group">-->
+<!--                        <input type="radio" class="btn-check" name="status" id="status1" autocomplete="off" value="재학생" {% if status == '재학생' %}checked{% endif %}>-->
+<!--                        <label class="btn btn-outline-primary" for="status1">재학생</label>-->
+                        <div class="form-check form-check-inline">
+                        <input type="radio" class="form-check-input" name="status" id="status1" value="재학생" {% if status == '재학생' %}checked{% endif %}>
+                        <label class="form-check-label" for="status1">재학생</label>
+                        </div>
+
+                        <div class="form-check form-check-inline">
+                        <input type="radio" class="form-check-input" name="status" id="status2" value="휴학생" {% if status == '휴학생' %}checked{% endif %}>
+                        <label class="form-check-label" for="status2">휴학생</label>
+                        </div>
+
+                        <div class="form-check form-check-inline">
+                        <input type="radio" class="form-check-input" name="status" id="status3" value="취준생" {% if status == '취준생' %}checked{% endif %}>
+                        <label class="form-check-label" for="status3">취준생</label>
+                        </div>
+<!--                    </div>-->
+
+
+                </div>
+
+                    <div class="col-md-4">
+                        <h6 style="font-weight: medium;">관심 직무</h6>
+                          <div class="form-check form-check-inline">
+                        <input type="radio" class="form-check-input" name="interest" id="interest1" value="경영">
+                        <label class="form-check-label" for="interest1">경영</label>
+                        </div>
+
+                        <div class="form-check form-check-inline">
+                        <input type="radio" class="form-check-input" name="interest" id="interest2" value="교육">
+                        <label class="form-check-label" for="interest2">교육</label>
+                        </div>
+
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" name="interest" id="interest3" value="인터넷">
+                            <label class="form-check-label" for="interest3">인터넷</label>
+                        </div>
+
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" name="interest" id="interest4" value="연구">
+                            <label class="form-check-label" for="interest4">연구</label>
+                        </div>
+
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" name="interest" id="interest5" value="마케팅">
+                            <label class="form-check-label" for="interest5">마케팅</label>
+                        </div>
+
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" name="interest" id="interest6" value="미디어">
+                            <label class="form-check-label" for="interest6">미디어</label>
+                        </div>
+
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" name="interest" id="interest7" value="의료">
+                            <label class="form-check-label" for="interest7">의료</label>
+                        </div>
+
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" name="interest" id="interest8" value="디자인">
+                            <label class="form-check-label" for="interest8">디자인</label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col">
+                                <button type="submit" class="btn btn-success mt-3">검색</button>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="megaDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            전체 학과
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="megaDropdown">
+                            <a class="dropdown-item" href="#" onclick="updateSubDepartments('글로벌융합대학')">글로벌융합대학</a>
+                            <a class="dropdown-item" href="#" onclick="updateSubDepartments('과학기술대학')">과학기술대학</a>
+                            <a class="dropdown-item" href="#" onclick="updateSubDepartments('아트앤디자인')">아트앤디자인</a>
+                            <a class="dropdown-item" href="#" onclick="updateSubDepartments('약학대학')">약학대학</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 하위 메뉴 -->
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="departmentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            선택된 대학
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="departmentDropdown">
+                            {% for department in departments %}
+                                <a class="dropdown-item" href="#" data-department-id="{{ department.id }}">{{ department.name }}</a>
+                            {% endfor %}
+                        </div>
+                    </div>
+
+                    <div class="submenu mt-2" id="subDepartmentContainer">
+                        <!-- 이 곳에 하위 메뉴가 동적으로 업데이트됩니다. -->
+                    </div>
+                </div>
+            </div>
+
+
+        </form>
+    </div>
+
+        <!-- 여기에 부트스트랩을 활용하여 추가적인 디자인을 적용할 수 있습니다. -->
+
+
+
+    <!-- 부트스트랩 스크립트 CDN 추가 -->
+
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+</body>
+</html>
