Fix:portfolio 모델추가

--- a/portfolio/templates/portfolio/portfolio_detail.html
+++ b/portfolio/templates/portfolio/portfolio_detail.html
@@ -1,66 +1,226 @@
-<!--포트폴리오 상세 페이지-->
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <title>힛</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/edea15a092.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="{% static 'portfolio/bootstrap/bootstrap.min.css' %}" media="screen">
+    <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
 </head>
-<body>
-{% include 'portfolio/menubar.html' %}
-<h2>{{ portfolio.title }}</h2>
-{% if portfolio.head_image %}
-<img src="{{ portfolio.head_image.url }}" class="card-img-top" alt="...">
-{% else %}
-<img src="https://picsum.photos/seed/{{portfolio.id}}/800/200" class="card-img-top" alt="...">
-{% endif %}
-<h3>{{ portfolio.content }}</h3>
-<p>{{ portfolio.created_at }}</p>
+
+    <body>
+        <!-- Responsive navbar-->
+        {% include 'portfolio/menubar.html' %}
+        <!-- Page content-->
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-lg-8">
+                    <!-- Post content-->
+                    <article>
+                        <!-- Post header-->
+                        <header class="mb-4">
+                            <!-- Post title-->
+                            <h1 class="fw-bolder mb-1">{{ portfolio.title }}</h1>
+                            <!-- Post meta content-->
+                            <div class="text-muted fst-italic mb-2">Posted on {{portfolio.created_at}}</div>
+                        </header>
+                        <!-- Preview image figure-->
+                        {% if portfolio.head_image %}
+                        <figure class="mb-4"><img class="img-fluid rounded" src="{{ portfolio.head_image.url }}" alt="..." /></figure>
+                        {% else %}
+                        <figure class="mb-4"><img class="img-fluid rounded" src="https://picsum.photos/seed/{{ portfolio.id }}/800/200" alt="..." /></figure>
+                        {% endif %}
+
+
+                        <!-- Post content-->
+                        <section class="mb-5">
+                            <p class="fs-5 mb-4">{{ portfolio.content }}</p>
+                        </section>
+                    </article>
+<!--좋아요 버튼-->
 <a id="like-button" href="like/" type="button" style="margin-left: 20px; margin-right: 20px; border-radius: 5px;padding: 10px 20px;background-color: #FFFDF0;text-decoration: none;color: black;">
-        {% if request.user in portfolio.like_users.all %}
-            <i class="fa fa-heart fg-danger" style="color:red;font-size: 20px;"></i>
-        {% else %}
-            <i class="fa fa-heart" style="font-size: 20px;"></i>
-        {% endif %}
-        <span id="like-count" style="font-size: 20px;">{{ portfolio.like_users.count }}</span>
-</a>
-<br/>
-<br/>
-<br/>
+    {% if request.user in portfolio.like_users.all %}
+        <i class="fa fa-heart fg-danger" style="color:red;font-size: 20px;"></i>
+    {% else %}
+        <i class="fa fa-heart" style="font-size: 20px;"></i>
+    {% endif %}
+    <span id="like-count" style="font-size: 20px;">{{ portfolio.like_users.count }}</span>
+</a><br/><br/> <br/>
 
-<h2>댓글</h2>
-<form method="post" action="{% url 'portfolio_detail' pk=portfolio.pk %}">
+                    <!-- 댓글 section-->
+                    <section class="mb-5">
+    <div class="card bg-light">
+        <div class="card-body">
+            <!-- Comment form-->
+            <form method="post" action="{% url 'portfolio_detail' pk=portfolio.pk %}">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">댓글 작성</button>
+    <h2>댓글</h2>
+
+    <div class="row">
+        <div class="col-md-2">
+            <label>익명</label>
+            {{ form.is_anonymous }}
+        </div>
+
+        <div class="col-md-5">
+            {{ form.text }}
+        </div>
+
+        <div class="col-md-5">
+            <button type="submit" class="btn btn-primary btn-block">댓글 작성</button>
+        </div>
+    </div>
 </form>
+            <hr>
+                                <!-- Comment with nested comments-->
+{% for comment in comments %}
+    {% if not comment.is_anonymous %}
+        <div class="d-flex mb-4">
+            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..."></div>
+            <div class="ms-3">
+                <div class="fw-bold">
+                    {{ comment.user.username }}
+                    <span class="text-muted">|</span>
+                    <span class="text-muted" style="font-size: 12px;">{{ comment.created_at }}</span>
+                </div>
+                <div>{{ comment.text }}</div>
+            </div>
+        </div>
+    {% else %}
+        <div class="d-flex mb-4">
+            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..."></div>
+            <div class="ms-3">
+                <div class="fw-bold">
+                    익명
+                    <span class="text-muted">|</span>
+                    <span class="text-muted" style="font-size: 12px;">{{ comment.created_at }}</span>
+                </div>
+                <div>{{ comment.text }}</div>
+            </div>
+        </div>
+    {% endif %}
+{% endfor %}
 
-<br/><br/>
 
-</body>
 
+
+
+
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <!-- Side widgets-->
+                <div class="col-lg-4">
+                    <!-- Search widget-->
+                    <div class="card mb-4">
+                        <div class="card-header">Search</div>
+                        <div class="card-body">
+                            <div class="input-group">
+                                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                                <button class="btn btn-primary" id="button-search" type="button">Go!</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Categories widget-->
+                    <!--<div class="card mb-4">
+                        <div class="card-header">Categories</div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <ul class="list-unstyled mb-0">
+                                        <li><a href="#!">Web Design</a></li>
+                                        <li><a href="#!">HTML</a></li>
+                                        <li><a href="#!">Freebies</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-sm-6">
+                                    <ul class="list-unstyled mb-0">
+                                        <li><a href="#!">JavaScript</a></li>
+                                        <li><a href="#!">CSS</a></li>
+                                        <li><a href="#!">Tutorials</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>-->
+                     <div class="card my-4">
+                    <h5 class="card-header">Categories</h5>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <ul class="list-unstyled mb-0">
+                                    {% for category in categories %}
+                                    <li>
+                                        <a href="{{ category.get_absolute_url }}">{{category}}({{category.post_set.count}})</a>
+                                    </li>
+                                    {% endfor %}
+                                    <li>
+                                        <a href="/blog/category/no_category/">미분류({{no_category_post_count}})</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                    <!-- Side widget-->
+                    <div class="card mb-4">
+                        <div class="card-header">Side Widget</div>
+                        <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 <script>
+    const currentUserID = {% if request.user.is_authenticated %}"{{ request.user.id }}"{% else %}null{% endif %};
+    const authorID = "{{ portfolio.author.id }}";
     const likeButton = document.getElementById('like-button');
     const likeCount = document.getElementById('like-count');
+    console.log('currentUserID:', currentUserID);
+    console.log('authorID:', authorID);
 
-likeButton.addEventListener('click', function() {
+    if (likeButton) {
+        likeButton.addEventListener('click', function(event) {
+            event.preventDefault(); // Prevent the default behavior of the link
+            console.log('Like button clicked');
 
-
-    likeButton.addEventListener('click', function() {
-
-        if (likeButton.querySelector('.fa-heart').classList.contains('fa-regular')) {
-            likeButton.querySelector('.fa-heart').classList.remove('fa-regular');
-            likeButton.querySelector('.fa-heart').classList.add('fa-solid', 'fg-danger');
-            likeCount.textContent = parseInt(likeCount.textContent) + 1;
-        } else {
-            likeButton.querySelector('.fa-heart').classList.remove('fa-solid', 'fg-danger');
-            likeButton.querySelector('.fa-heart').classList.add('fa-regular');
-            likeCount.textContent = parseInt(likeCount.textContent) - 1;
-        }
-    });
+            // Ajax 요청
+            fetch('like/')
+                .then(response => response.json())
+                .then(data => {
+                    console.log('Response:', data);
+                    if (data.liked) {
+                        likeButton.querySelector('.fa-heart').classList.remove('fa-regular');
+                        likeButton.querySelector('.fa-heart').classList.add('fa-solid', 'fg-danger');
+                    } else {
+                        likeButton.querySelector('.fa-heart').classList.remove('fa-solid', 'fg-danger');
+                        likeButton.querySelector('.fa-heart').classList.add('fa-regular');
+                    }
+                    likeCount.textContent = data.like_count;
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+        });
+    } else {
+        console.error('
 </script>
 
 </html>
