--- a/portfolio/templates/portfolio/portfolio_list.html
+++ b/portfolio/templates/portfolio/portfolio_list.html
@@ -28,7 +28,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ p.title }}</h5>
                             <p class="card-text">{{ p.content | truncatewords:10 }}</p>
-                            <a href="{{ p.get_absolute_url }}" class="btn btn-primary text-light">더보기</a
+                            <a href="{{ p.get_absolute_url }}" class="btn btn-primary text-light">더보기</a>
                         </div>
                     </div>
                 </div>
@@ -38,21 +38,20 @@
 
     <br/><br/>
     <!-- 페이지네이션 링크 표시 -->
-        <div class="pagination justify-content-center">
-            <span class="step-links">
-
-                {% if page_obj.has_previous %}
+    <div class="pagination justify-content-center">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
                 <a href="?page={{page_obj.previous_page_number}}" class="btn btn-primary text-light">Prev</a>
             {% endif %}
             Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
             {% if page_obj.has_next %}
                 <a href="?page={{page_obj.next_page_number}}" class="btn btn-primary text-light">Next</a>
             {% endif %}
-
-            </span>
-        </div><br/>
+        </span>
+    </div><br/>
 
 </body>
 
 </html>
+
 
